modified:   app/controllers/articles_controller.rb 	new file:   app/controllers/pages_controller.rb 	modified:   app/models/article.rb 	new file:   app/views/articles/edit.html.erb 	modified:   app/views/articles/index.html.erb 	new file:   app/views/articles/new.html.erb 	modified:   app/views/articles/show.html.erb 	modified:   app/views/layouts/application.html.erb 	new file:   app/views/pages/about.html.erb 	new file:   app/views/pages/home.html.erb 	modified:   config/routes.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+     <!-- this each method below is because of the flash helper -->
+     <!-- this will show the flash value pair   -->
+    <% flash.each do |name,msg| %> 
+      <%=msg%>
+    <%end%>
     <%= yield %>
   </body>
 </html>
