--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,16 +3,22 @@
     <thead>
         <th>Title</th>
         <th>Description</th>
-        <th>Actions</th>
+        <th colspan="3">Actions</th>
     </thead>
     <tbody>
         <% @articles.each do | article | %>
         <tr>
             <td><%=article.title%></td>
             <td><%=article.description%></td>
-            <td>Placeholder</td>
+            <td><%=link_to 'Show',article_path(article.id)%> </td>
+            <!== the get method should not be specified because this is the default ==>
+            <td><%=link_to 'Edit',edit_article_path(article.id)%> </td>
+            <td><%=link_to 'Delete',article_path(article.id), method: :delete, data: {confirm:'Are you sure?'}%> </td>
+            
         </tr>
         <% end %>
     </tbody>
-
 </table>
+<p>
+<%= link_to "Create new article", new_article_path %>
+</p>
