modified:   app/controllers/articles_controller.rb 	new file:   app/views/articles/_form.html.erb 	modified:   app/views/articles/edit.html.erb 	modified:   app/views/articles/new.html.erb 	new file:   app/views/layouts/_messages.html.erb 	modified:   app/views/layouts/application.html.erb After the refactoring .

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,8 @@
   <body>
      <!-- this each method below is because of the flash helper -->
      <!-- this will show the flash value pair   -->
-    <% flash.each do |name,msg| %> 
-      <%=msg%>
-    <%end%>
+      <!-- in separated file layouts/messages  -->
+     <%= render 'layouts/messages'%>
     <%= yield %>
   </body>
 </html>
