--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,25 +1,6 @@
 <h1>Create a new article</h1>
-<% if @article.errors.any? %>
-    <h2> The following errors prevented the aricle from being saved </h2>
-    <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-    <li><%=msg%></li>
-    <%end%>
-    </ul>
-<%end%>
+<%= render 'form '  %>>
 
-<%= form_with scope: :article,url: articles_path , local:true do |field| %>
-<p>
-  <%= field.label :title %> <br>
-  <%= field.text_field :title %> 
-</p>
-<p>
-  <%= field.label :description %> <br>
-  <%= field.text_area :description %>
-</p>
-<p>
-<%= field.submit %> 
-</p>
-<% end %>
+
 
 <%= link_to 'Return to the list', articles_path %>
