Added the bootstrap to the application
 Changes to be committed:
	modified:   app/assets/stylesheets/application.css
new file:   app/assets/stylesheets/custom.css.scss
	modified:   app/javascript/packs/application.js
	modified:   app/views/articles/_form.html.erb
	new file:   app/views/layouts/_navigation.html.erb
	modified:   app/views/layouts/application.html.erb
	modified:   config/webpack/environment.js
	modified:   package.json
	modified:   yarn.lock

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   </head>
 
   <body>
-     <!-- this each method below is because of the flash helper -->
-     <!-- this will show the flash value pair   -->
-      <!-- in separated file layouts/messages  -->
+
+
+
      <%= render 'layouts/messages'%>
+     <%= render 'layouts/navigation'%>
     <%= yield %>
   </body>
 </html>
