--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,30 @@
-<h1>
-Main Page
-</h1> 
+<div id="page-content">
+
+<div class="container" id="home-container">
+    <div class="jumbotron text-center text-white">
+    <h1 class="display-4">Alpha Blog</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p class="lead">
+        <a class="btn btn-success btn-lg" href="#" role="button">Sign Up!</a>
+    </p>
+    </div>
+</div>
+
 <%= link_to 'Articles', articles_path %>
 <%= link_to 'About', about_path %>
+</div>
 
+<footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white">
+    <div class="container text-center">
+      <%
+=begin%>
+ <small>Copyright &copy; Your Website</small> 
+<%
+=end%>
+        <small>Copyright &copy;  <%= link_to "I have no website so GOOGLE","https://google.com" ,class:"text-white"%> </small> 
 
+    </div>
+  </footer>
 
