--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,47 @@
-<h1>Articles listing page</h1>
-<table>
-    <thead>
-        <th>Title</th>
-        <th>Description</th>
-        <th colspan="3">Actions</th>
-    </thead>
-    <tbody>
-        <% @articles.each do | article | %>
-        <tr>
-            <td><%=article.title%></td>
-            <td><%=article.description%></td>
-            <td><%=link_to 'Show',article_path(article.id)%> </td>
+<div id="page-content">
+    <h1 class="text-center mt-4">Listing all articles</h1>
+     <% @articles.each do | article | %>
+
             <!== the get method should not be specified because this is the default ==>
-            <td><%=link_to 'Edit',edit_article_path(article.id)%> </td>
-            <td><%=link_to 'Delete',article_path(article.id), method: :delete, data: {confirm:'Are you sure?'}%> </td>
             
-        </tr>
-        <% end %>
-    </tbody>
-</table>
+
+            <div class=container">
+                <div class="row justify-content-md-center">
+                    <div class="col-8 mt-4">
+                        <div class="card text-center shadow mb*5 bg-white rounded">
+                            <div class="card-header font-italic">
+                                by ...
+                            </div>
+                            <div class="card-body">
+                                <%
+=begin%>
+<h5 class="card-title"><%=article.title%></h5> 
+<%
+=end%>
+                                <h5 class="card-title"><%=link_to article.title,article_path(article.id),class: "text-success"%></h5>
+
+
+                                <p class="card-text"><%=truncate(article.description, length:100)%></p>
+                                <%=link_to "View",article_path(article.id), class:"btn btn-outline-success"%>
+                                <%=link_to "Edit",edit_article_path(article.id), class:"btn btn-outline-info"%>
+                                <%=link_to "Delete",article_path(article.id), class:"btn btn-outline-danger" ,  method: :delete, data: {confirm:'Are you sure?'}%>
+
+                            </div>
+                            <div class="card-footer"> 
+                                <small>Created <%=time_ago_in_words(article.created_at) %> ago
+                                <%=unless article.modified_at==nil then   ", edited "+ time_ago_in_words(article.modified_at) +" ago" end%> ago </small>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    <% end %> 
+</div>
+
+<!--
 <p>
 <%= link_to "Create new article", new_article_path %>
 </p>
+
+-->
