Modified the style in new and create and _form
	modified:   app/views/articles/_form.html.erb
	modified:   app/views/articles/edit.html.erb
	modified:   app/views/articles/new.html.erb
	modified:   config/environment.rb

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,8 @@
+<div id="page-content">
+    <h1 class="text-center mt-4">Edit Article</h1>
 
-<h1>Edit article</h1>
-<%= render='form'%>
 
-<%= link_to 'Cancel and return to the list', articles_path %>
+<%= render 'form'%>
+
+
+</div>
