--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,37 @@
-<% if @article.errors.any? %>
-    <h2> The following errors prevented the aricle from being saved </h2>
-    <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-    <li><%=msg%></li>
-    <%end%>
-    </ul>
-<%end%>
+<div class="container">
 
-<%= form_with(model: @article, local: true) do |field| %>
-<p>
-  <%= field.label :title %> <br>
-  <%= field.text_field :title %> 
-</p>
-<p>
-  <%= field.label :description %> <br>
-  <%= field.text_area :description %>
-</p>
-<p>
-<%= field.submit %> 
-</p>
-<% end %>
+  <% if @article.errors.any? %>
+      <h2> The following errors prevented the aricle from being saved </h2>
+      <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+      <li><%=msg%></li>
+      <%end%>
+      </ul>
+  <%end%>
+
+<div class="row justify-content-center">
+  <div class="col-10">
+    <%= form_with(model: @article, class:"shadow p-3 mb-3 bg-info rounded",local: true) do |field| %>
+    <div class="form-group row">
+      <%= field.label :title , class:"col-2 col-form-label text-light" %> <br>
+        <div class="col-10">
+          <%= field.text_field :title, class:"form-control shadow rounded" ,placeholder: "Title of artice" %> 
+        </div>
+    </div>
+
+    <div class="form-group row">
+      <%= field.label :description , class:"col-2 col-form-label text-light" %> <br>
+      <div class="col-10">
+        <%= field.text_area :description, rows:10, class:"form-control shadow rounded" ,placeholder:"Description of article"%>
+      </div>
+    </div>
+
+    <div class="form-group row justify-content-center">
+      <%= field.submit class:"btn btn-outline-light ntn-lg" %> 
+    </div>
+    <% end %>
+  </div>
+
+  <%= link_to '[Cancel and return to the list]', articles_path,class:"text-info" %>
+
+</div>
