--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Create a new article</h1>
-<%= render 'form '  %>>
+<div id="page-content">
+    <h1 class="text-center mt-4">Create new articles</h1>
 
+    <%= render 'form'  %>
 
-
-<%= link_to 'Return to the list', articles_path %>
+</div>
