--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,4 @@
 <div class="container">
-
-
 <div class="row justify-content-center">
   <div class="col-10">
   <%= render 'shared/errors'%>
@@ -25,7 +23,7 @@
     </div>
     <% end %>
   </div>
-
-  <%= link_to '[Cancel and return to the list]', articles_path,class:"text-info" %>
-
+  <div class="mb-3">
+    <%= link_to '[Cancel and return to the list]', articles_path,class:"text-info" %>
+  </div>
 </div>
