Users edit 	modified:   app/controllers/users_controller.rb 	modified:   app/views/users/_form.html.erb 	new file:   app/views/users/edit.html.erb

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
 
 
     <div class="form-group row justify-content-center">
-      <%= field.submit "Sign up" ,class:"btn btn-outline-light ntn-lg" %> 
+      <%= field.submit @user.new_record? ? "Sign up" : "Update account" ,class:"btn btn-outline-light ntn-lg" %> 
     </div>
     <% end %>
   </div>
