--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,8 +8,7 @@
                     <div class="col-8 mt-4">
                         <div class="card text-center shadow mb*5 bg-white rounded">
                             <div class="card-header font-italic">
-                                by <%=article.user.username if article.user %>
-                            </div>
+                                by <%= link_to article.user.username, user_path(article.user)  if article.user %>                            </div>
                             <div class="card-body">
                                 <%
 =begin%>
