Add pagination to the views 	modified:   Gemfile 	modified:   Gemfile.lock 	modified:   app/assets/stylesheets/custom.css.scss 	modified:   app/controllers/articles_controller.rb 	modified:   app/controllers/users_controller.rb 	modified:   app/views/articles/index.html.erb 	modified:   app/views/users/index.html.erb 	modified:   app/views/users/show.html.erb 	new file:   vendor/cache/ruby/2.5.0/cache/will_paginate-3.1.8.gem 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/LICENSE 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/README.md 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/active_record.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/array.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/collection.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/core_ext.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/data_mapper.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/deprecation.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/i18n.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/locale/en.yml 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/mongoid.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/page_number.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/per_page.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/railtie.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/sequel.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_paginate-3.1.8/lib/will_paginate/version.rb 	new file:   vendor/cache/ruby/2.5.0/gems/will_pagin

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,13 @@
     <h1 class="text-center mt-4">Alpha Bloggers</h1>
+
+    <div class="flickr_pagination text-center">
+    <%= will_paginate @user, :container => false %>
+    </div>
     <%= render 'user' %>
+    <div class="flickr_pagination text-center">
+    <%= will_paginate @user, :container => false %>
+    </div>
+
 
 
 
