--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,14 @@
     <h1 class="text-center mt-4">Listing all articles</h1>
+
+    <div class="flickr_pagination text-center">
+    <%= will_paginate @article, :container => false %>
+    </div>
+
     <%= render 'article' %>
 
+    <div class="flickr_pagination mb-4 mt-4 text-center">
+    <%= will_paginate @article, :container => false %>
+    </div>
 
 
 <!--
