--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
     <h1 class="text-center mt-4"><%=@user.username%>'s profile</h1>
 
+
     <%= gravatar_for  @user,size: 200%>
 
     <div class="text-center mt-4">
@@ -8,6 +9,16 @@
 
 
     <h3 class="text-center mt-4">Articles</h3>
+
+    <div class="flickr_pagination text-center">
+    <%= will_paginate @articles, :container => false %>
+    </div> 
+
+
     <%= render 'articles/article' %>
 
+
+ <div class="flickr_pagination text-center mb-4">
+    <%= will_paginate @articles, :container => false %>
+    </div> 
 
