--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,8 +18,10 @@
 =end%>
 
                                 <div class="card-text text-left"><%=simple_format(@article.description)%></div>
-                                <%=link_to "Edit",edit_article_path(@article.id), class:"btn btn-outline-info"%>
-                                <%=link_to "Delete",article_path(@article.id), class:"btn btn-outline-danger" ,  method: :delete, data: {confirm:'Are you sure?'}%>
+                                <% if logged_in? && @article.user == current_user%>
+                                    <%=link_to "Edit",edit_article_path(@article.id), class:"btn btn-outline-info"%>
+                                    <%=link_to "Delete",article_path(@article.id), class:"btn btn-outline-danger" ,  method: :delete, data: {confirm:'Are you sure?'}%>
+                                <%end%>
 
                             </div>
                             <div class="card-footer"> 
