--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,11 +21,9 @@
     <div class="form-group row">
       <%= field.label :category , class:"col-2 col-form-label text-light" %> <br>
       <div class="col-10">
-        <%= field.collection_select(:category_ids,Category.all, :id, :name,
-        {prompt: "Make your selection from the list below (can be empty)"}, {multiple: true,size: 3, class:"custom-select shadow rounded"})  %>
+        <%= field.collection_select(:category_ids,Category.all, :id, :name, {prompt: "Make your selection from the list below (can be empty)"}, {multiple: true,size: 3, class:"custom-select shadow rounded"})  %>
       </div>
     </div>
-
 
 
 
