--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -7,14 +7,23 @@
                 <div class="row justify-content-md-center">
                     <div class="col-8 mt-4">
                         <div class="card text-center shadow mb*5 bg-white rounded">
+                            <% if article.user %>
                             <div class="card-header font-italic">
-                                by <%= link_to article.user.username, user_path(article.user)  if article.user %>                            </div>
+                                by <%= link_to article.user.username, user_path(article.user)  if article.user %>                            
+                            </div>
+                            <%end%>
+
+                            <% if article.categories.any? %>
+                                <div class="mt-2">
+                                    <%=render article.categories %>  
+                                        <%# this calls the categories view _category.html.erb %>
+                                </div>
+                            <%end%>
+
+
+
                             <div class="card-body">
-                                <%
-=begin%>
-<h5 class="card-title"><%=article.title%></h5> 
-<%
-=end%>
+                                
                                 <h5 class="card-title"><%=link_to article.title,article_path(article.id),class: "text-success"%></h5>
 
 
