--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,12 @@
                             <div class="card-header font-italic">
                                 by <%=@article.user.username if @article.user%>
                                 <%= link_to gravatar_for(@article.user),user_path(@article.user) %>
+                                <% if @article.categories.any? %>
+                                    <div class="mt-2">
+                                        <%=render @article.categories %>  
+                                         <%# this calls the categories view _category.html.erb %>
+                                    </div>
+                                <%end%>
                             </div>
                             <div class="card-body">
 
