Create edit categories 	modified:   app/controllers/categories_controller.rb 	new file:   app/views/categories/_form.html.erb 	new file:   app/views/categories/edit.html.erb 	modified:   app/views/categories/new.html.erb

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Create a new category</h1>
+<h1 class="text-center mt-4">Edit category</h1>
 
 
 
@@ -10,6 +10,6 @@
   </div>
   
   <div class="mb-3">
-    <%= link_to '[Cancel and return to the list]', categories_path ,class:"text-info" %>
+    <%= link_to '[Cancel and return to the category]', category_path(@category),class:"text-info" %>
   </div>
 </div>
